HUDF-599 fixed text alignment issue for parked calls gadget

--- a/FJSHUD/app/styles/dock.less
+++ b/FJSHUD/app/styles/dock.less
@@ -115,7 +115,24 @@
 	&:hover {
 		box-shadow: 0 0 8px gray;
 	}
-
+    
+    #parked_calls{
+        .ListRow .ListRowTitle{
+            padding: 0px;
+            white-space: nowrap;
+            max-width: 80px;
+            padding-top: 5px;
+            text-overflow:ellipssis;    
+            padding-left: 3px;       
+        }
+        
+        .timer{
+            float:right;
+            font-size:.65em;
+            margin-top:3px;
+            margin-right:2px;
+        }
+    }
 	.Header {
 	    cursor: pointer;
 		background-color: #ECECEC;
@@ -128,7 +145,9 @@
 		flex-direction: row;
 		-webkit-flex-direction: row;
 	
-	    
+	    span{
+	       margin-top: -3px;
+	    }
 		& > .Avatar {
 			margin-top: auto;
 		}
